--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,50 @@
+.header {
+    height: 70px;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-bottom: 10%;
+}
+
+button {
+    width: 200px;
+    height: 50px;
+    border-radius: 30px;
+    justify-content: center;
+    background-color: orange;
+}
+
+footer {
+    height: 70px;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-bottom: 10%;
+}
+
+.descWindow {
+    padding: 10px;
+    justify-content: center;
+    height: 120px;
+    width: 250px;
+    border-radius: 10px;
+    background-color: lightblue;
+}
+
+.hero {
+    display: inline-block;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.picOfMe {
+    width: 50%;
+    height: auto;
+}
+
+.phoneFrame {
+    justify-content: right;
+}
+
+/*
 .inline-block {
     display: inline-block;
     vertical-align: top;
@@ -52,4 +99,4 @@ ul {
 
 footer {
     background-color: #373738;
-}
+}*/
