--- a/css/index.css
+++ b/css/index.css
@@ -11,30 +11,71 @@ button {
     border-radius: 30px;
     justify-content: center;
     background-color: orange;
+    position: absolute;
+    left: 210px;
+    top: 500px;
 }
 
 footer {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    background: black;
     height: 70px;
-    padding-left: 10%;
-    padding-right: 10%;
-    margin-bottom: 10%;
 }
 
-.descWindow {
+#descWindow {
     padding: 10px;
+    position: absolute;
     justify-content: center;
-    height: 120px;
-    width: 250px;
+    height: 150px;
+    width: 200px;
     border-radius: 10px;
     background-color: lightblue;
+    left: 210px;
+    top: 265px;
 }
 
-.hero {
-    display: inline-block;
-    padding-left: 10%;
-    padding-right: 10%;
+#heroGrid {
+    margin: 0px 10%;
+    display: grid;
+    min-height: 500px;
+    height: 70vh;
+    
+    grid-template-columns: 50% 50%;
+    grid-template-areas: "shotOfMe phoneFrame";
 }
 
+.heroGridArea {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    display: flex;
+    position: relative;
+  }
+
+#shotOfMe {
+    grid-area: shotOfMe;
+}
+#myShot {
+    position: absolute;
+    right: 200px;
+    top: 100px;
+    padding: 25px;
+    max-width: 550px;
+    z-index: 100;
+}
+
+#phoneFrame {
+    grid-area: phoneFrame;
+    background-image: './images/handphoneframe.png';
+}
+
+
+
+
+  /*
 .picOfMe {
     width: 50%;
     height: auto;
